# PyMyApps

./: .gitignore  KyanToolKit_Py.py  README.md
AppStoreIconExtract/: appstore_icon_extract.py  pyproject.toml  requirements.txt
AppUpdater/: Updater.py  Updaters.py  appupdater.py  requirements.txt
AudioSrvRestarter/: run_restarter.py
AutoRename/: AutoRename.py  rename.toml  rename_dvr.py
BirthMatchGame/: GuessByBirth.py  ReadThis.txt  SuggestByBirth_Full.py  SuggestByBirth_Simple.py
CalcWorkTime/: calcWorkTime.py
ChangeFileNames/: change_name.py
CloudFlareNodePing/: cfnodeping.py  requirements.txt
Configurator/: configurator-example.toml  configurator.py  configurator.toml
ConverSBV/: convertSbv.py
ConvertSBV/: convertSbv.py
DeleteEmptyFolders/: delete_empty_folders.py
DjangoTool/: djangoTool.conf  djangoTool.ini  djangoTool.py  manage.py
EmptyFolderTree/: delete_empty_folders.py  empty_folder_tree.py  empty_folder_tree.toml
FileDiffs/: file_diffs.py
FileTrack/: Filetrack.py  ItunesLib.py  README.md  filetrack_changed.py  filetrack_unused.py  requirements.txt  run_filetrack.go  run_filetrack.py  run_iTunes_diff.py
FileTrack/Watchdog/: watchme.py
FileTrack/filetrack/: filetrack.toml  run_filetrack.py  run_iTunes_diff.py
FilesDiff/: README.md  files_diff.go  files_diff.py  requirements.txt
GameMatching/: GuessByBirth.py  KyanToolKit3.py  SuggestByBirth_Full.py  SuggestByBirth_Simple.py
IDVarify/: idvarify.py
JawboneGui/: 2013.csv  gui.py
Kana2Romaji/: README.md  jisho.py  kana2romaji.py  requirements.txt
KeyPresser/: FF14-CheckHouse18.py  FF14抢房04.py  requirement.txt
KeyboardSimulator/: GGBH-Roll.py  kbdsimu.py  keyboardsimulator.py  requirement.txt
KindleHighlightFormatter/: README.md  kindle_highlight_formatter.py  pyproject.toml  requirements.txt
KindleHighlightFormatter/parsers/: HtmlFormatter.py  MarkdownFormatter.py
KindleHighlightFormatter/tests/: example.html  test_kindlehighlightformatter.py
Maths/: permutations.py
NetworkPorter/: network_porter.py  pyproject.toml
NetworkQuality/: netping.py  netqual-ui.ini  netqual-ui.py  netqual.ini  netqual.py  netqual.txt  ping3.py  requirements.txt
NetworkQuality/exe/: geneEXE.bat
NovelPurify/: NovelPurify.py
PacCaddy/: README.md
PhraseConvertor/: qq2mac.py
PlanetSide2_PopCalc/: population_calc.py
PorxyPac/: Caddyfile  pac
ProxyChecker/: proxychecker.py
ProxyCommander/: main.py  requirements.txt
ProxyConf/: Clash-Rules-MyRules.yaml  ClashForWindows-Rules-Discord.yaml  MyRules.toml  Shadowrocket-Module-Extra.sgmodule  Shadowrocket-Module-MyRules.sgmodule  epicgames-rules.yaml  requirements.txt  shdwrckt_extra_rules.sgmodule  shdwrckt_gfwlst.conf  update_configs.py  update_confs.py  update_from_myrules.py  update_shadowrocket_gfwlist.py  update_shdwrckt_gfwlist.py
ProxyConf/classes/: RuleSet.py
PyChatRobo/: KyanToolKit_Py.py  socket_client.py  socket_server.py
PyEncodeK/: Caeser_Shift.py  Entrance.py
PyEncodeK/Encodes/: Emoji_CodeMapping.py  Emoji_Encode.py  Emoji_Encode_Pure.py  Morse_Encode.py  Morse_Encode_Mapping.py  NATO_Phonetic_Encode.py  NineKey_Encode.py  Qwerty_Encode.py  Qwerty_Encode_Mapping.py  Rail_Fence_Encode.py  Special_Char_Encode.py  Special_Char_Mapping.py  Xor_Key_Encode.py
PyEncryptor/: Caeser_Shift.py  Entrance.py  KyanToolKit_Py.py  README.md  runThis.bat  trace.xml
PyEncryptor/Encodes/: ASCII_Encode.py  Alpha_Index_Encode.py  Alpha_Index_Encode_Mapping.py  (+16 more)
PyRoboMatch/: KyanToolKit_Py.py  Main.py  Robo.py  RoboYard.py  runThis.bat
PyUnboostnote/: PyUnboostnote.py
PyWordCloud/: PyWordCloud.py
RSA/: rsa.py
RoboMatch/: Main.py  README.md
ShellProxy/: requirements.txt  shellproxy.py  shellproxy_cli.py
SubtitleTools/: convertSbv.py  mergeSrt.py
Unboostnote/: README.md  unboostnote.py
UwsgiTool/: uwsgi.xml  uwsgiTool.py
WinPrivilege/: winpriv.py
WordCloudGen/: requirements.txt
YouGetter/: YouGetter.ini  YouGetter.py  ffmpeg.url  requirements.pip
(+4 files in other folders)
