[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appstoreiconextractor"
description = "AppStore Icon Extractor"
requires-python = ">=3.6"
version = "1.0.0"
# readme = "README.md"
keywords = ["python", "appstore", "icon", "extract"]
#license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "BeautifulSoup4",
    "consoleiotools",
    "consolecmdtools",
    "requests",
    "pyperclip"
]

[[project.authors]]
name = "Kyan"
email = "kai@kyan001.com"

[project.optional-dependencies]
dev = ["build", "wheel", "pycodestyle"]

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests"]
