[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appstoreiconextractor"
description = "AppStore Icon Extractor"
requires-python = ">=3.6"
version = "1.0.0"
dependencies = [
    "BeautifulSoup4",
    "consoleiotools",
    "consolecmdtools",
    "requests",
    "pyperclip"
]

[project.optional-dependencies]
dev = ["build", "wheel", "pycodestyle"]

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests"]
