[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appstoreiconextractor"
description = "AppStore Icon Extractor"
requires-python = ">=3.6"
dynamic = ["dependencies", "version"]

[project.optional-dependencies]
dev = ["build", "wheel", "pycodestyle"]

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests"]

[tool.setuptools.dynamic]
version = {attr = "appstore_icon_extract.__version__"}
dependencies = {file = ["requirements.txt"]}
