[tool.poetry]
name = "Kindle Highlight Formatter"
version = "1.2.1"
description = "Convert Kindle Highlight HTML file into Markdown text"
authors = ["Kyan <ykyankai@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
bs4 = "*"
lxml = "*"
pyperclip = "*"
consoleiotools = "*"
consolecmdtools = "*"

[tool.poetry.dev-dependencies]
pycodestyle = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
