[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Kindle_Highlight_Formatter"
description = "Convert Kindle Highlight HTML file into Markdown text"
requires-python = ">=3.7"
dynamic = ["dependencies", "version"]

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests"]

[tool.setuptools.dynamic]
version = {attr = "kindle_hightlight_formatter.__version__"}
dependencies = {file = ["requirements.txt"]}
